--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   db:
     image: postgres:11
     container_name: db_app
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb/10-init.sql
+      - .:/docker-entrypoint-initdb.d
     command:
       - p 5433
     expose:
