--- a/.env-prod
+++ b/.env-prod
@@ -1,6 +1,6 @@
-DATABASE_PORT=5433
+DATABASE_PORT=5432
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=delivery
 POSTGRES_HOST=postgres
-POSTGRES_HOSTNAME=db
+POSTGRES_HOSTNAME=db_app
