--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.5"
 services:
   db:
     image: postgres:11
@@ -6,10 +6,6 @@ services:
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb/10-init.sql
       - .:/docker-entrypoint-initdb.d
-    command:
-      - p 5433
-    expose:
-      - 5433
     env_file:
       - .env-prod
   app:
@@ -18,6 +14,7 @@ services:
     env_file:
       - .env-prod
     container_name: fastapi_app
+    command: ["/fastapi_app/app.sh"]
     ports:
       - 9999:8000
     depends_on:
